examples/test/testpolicy4758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4758
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key25: value40
      key40: value41
      key27: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value45
          key6: value16
      podSelector:
        matchLabels:
          key22: value2
